--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.actividaddeaprendizaje">
+
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -10,14 +11,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ActividadDeAprendizaje">
+        <activity android:name=".characters.fdCharacters.view.FdCharactersActivity"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".characters.lstCharacters.view.LstCharactersActivity"/>
-
+        <activity android:name=".characters.lstCharacters.view.LstCharactersActivity" />
     </application>
 
 </manifest>
